# panex

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  bin.js  install.js  lefthook.yml  mise.toml  package.json  tsconfig.json  tsup.config.ts
.github/workflows/: ci.yml  release.yml
panex-rs/: Cargo.toml  INTERNALS.md
panex-rs/src/: config.rs  event.rs  lib.rs  main.rs
panex-rs/src/input/: clipboard.rs  handler.rs  mod.rs  mouse.rs  selection.rs
panex-rs/src/process/: buffer.rs  manager.rs  mod.rs  pty.rs
panex-rs/src/ui/: app.rs  help_popup.rs  mod.rs  output_panel.rs  process_list.rs  search.rs  status_bar.rs
panex-rs/tests/: buffer_size_test.rs  buffer_test.rs  panel_width_test.rs  release_workflow_readme_test.rs  restart_popup_test.rs  search_test.rs
scripts/: fire.zig
src/: cli.integration.test.ts  cli.ts  index.ts  process-manager.test.ts  process-manager.ts  terminal-buffer.ts  tui.ts  types.ts
src/components/: App.tsx  HelpPopup.tsx  OutputPanel.tsx  ProcessList.tsx  Scrollbar.tsx  StatusBar.tsx  index.ts
src/hooks/: index.ts  useFocusMode.ts  useMouseWheel.ts  useProcessManager.ts
