[package]
name = "panex"
version = "0.0.0"  # Set by CI from git tag
edition = "2021"
description = "Process manager with TUI"
license = "MIT"
repository = "https://github.com/king8fisher/panex"

[[bin]]
name = "panex"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
vte = "0.13"
anyhow = "1"
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true

[target."cfg(unix)".dependencies]
libc = "0.2.180"
