[package]
name = "panex"
version = "0.0.0"  # Set by CI from git tag
edition = "2021"
description = "Process manager with TUI"
license = "MIT"
repository = "https://github.com/king8fisher/panex"

[[bin]]
name = "panex"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
vte = "0.15"
anyhow = "1"
futures = "0.3"
arboard = "3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
insta = { version = "1", features = ["glob"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[target."cfg(unix)".dependencies]
libc = "0.2.180"
